--- a/bootique-jetty-docs/src/main/asciidoc/_chapters/_01_jetty_integration.adoc
+++ b/bootique-jetty-docs/src/main/asciidoc/_chapters/_01_jetty_integration.adoc
@@ -17,9 +17,14 @@
 
 == Bootique Integration with Jetty
 
-https://github.com/bootique/bootique-jetty[`bootique-jetty`] module embeds http://www.eclipse.org/jetty/[Jetty web server] in your application. It provides environment for running servlet specification objects (servlets, servlet filters, servlet listeners). Also you will be able to serve static files that are either packaged in the application jar or located somewhere on the filesystem. As things go with Bootique, you will be able to centrally configure both Jetty (e.g. set connector ports) as well as your apps (e.g. map servlet URL patterns and pass servlet parameters).
+https://github.com/bootique/bootique-jetty[`bootique-jetty`] module embeds http://www.eclipse.org/jetty/[Jetty web server]
+in your application. It provides environment for running servlet specification objects (servlets, servlet filters,
+servlet listeners). Also you will be able to serve static files that are either packaged in the application jar or
+located somewhere on the filesystem. As things go with Bootique, you will be able to centrally configure both Jetty
+(e.g. set connector ports) and your apps (e.g. map servlet URL patterns and pass servlet parameters).
 
-`bootique-jetty` is "drag-and-drop" just like any other Bootique module. It is enabled by simply adding it to the `pom.xml` dependencies (assuming `autoLoadModules()` is in effect):
+`bootique-jetty` is "drag-and-drop" just like any other Bootique module. It is enabled by simply adding it to the
+`pom.xml` dependencies (assuming `autoLoadModules()` is in effect):
 
 [source,xml]
 ----
@@ -29,7 +34,8 @@ https://github.com/bootique/bootique-jetty[`bootique-jetty`] module embeds http:
 </dependency>
 ----
 
-Alternatively you may include an "instrumented" version of `bootique-jetty` that will provide a number of metrics for your running app:
+Alternatively you may include an "instrumented" version of `bootique-jetty` that will provide a number of metrics for
+your running app:
 
 [source,xml]
 ----
@@ -50,4 +56,5 @@ i.b.j.s.ServerConnector - Started ServerConnector@41ccbaa{HTTP/1.1,[http/1.1]}{0
 i.b.j.s.Server - Started @490ms
 ----
 
-Various aspects of the Jetty container, such as listen port, thread pool size, etc. can be configured in a normal Bootique way via YAML, as detailed below in the "Configuration Reference" chapter.
+Various aspects of the Jetty container, such as listen port, thread pool size, etc. can be configured in a normal
+Bootique way via YAML, as detailed below in the "Configuration Reference" chapter.
