--- a/bootique-jetty-docs/src/main/asciidoc/index.adoc
+++ b/bootique-jetty-docs/src/main/asciidoc/index.adoc
@@ -21,3 +21,4 @@
 include::_chapters/_01_jetty_integration.adoc[]
 include::_chapters/_02_programming_jetty_apps.adoc[]
 include::_chapters/_03_configuration.adoc[]
+include::_chapters/_04_extension_modules.adoc[]
